--- a/frontend/src/pages/user/edit/Edit.css
+++ b/frontend/src/pages/user/edit/Edit.css
@@ -1,41 +1,86 @@
 .edit-page {
   background-color: #d4faff;
-  min-height: 100vh;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.edit-card {
+  background-color: #f9fefe;
+  padding: 30px;
+  border-radius: 20px;
+  text-align: center;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  width: 400px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 2rem;
+  gap: 1rem;
 }
 
-.edit-page h2 {
-  font-size: 1.8rem;
+.edit-card img {
+  width: 80px;
+  margin: 0 auto 10px;
+}
+
+.edit-card h2 {
+  margin-bottom: 10px;
   color: #1d3e45;
-  margin-bottom: 1.5rem;
 }
 
-.edit-page input,
-.edit-page select {
-  width: 300px;
+.edit-card input,
+.edit-card select {
   padding: 10px;
-  margin-bottom: 1rem;
-  border: 1px solid #bdf4ff;
   border-radius: 6px;
+  border: 1px solid #bdf4ff;
+  width: 100%;
   font-size: 1rem;
 }
 
-.edit-page button {
+
+.name-row {
+  display: flex;
+  gap: 10px;
+}
+
+.name-row input {
+  flex: 1;
+}
+
+.edit-button {
   background-color: #1d3e45;
   color: white;
   font-weight: bold;
-  padding: 10px 20px;
-  width: 300px;
+  width: 100%;
+  padding: 10px;
   border-radius: 6px;
   border: none;
+  margin-top: 15px;
+  transition: all 0.3s ease;
   cursor: pointer;
-  transition: background-color 0.2s;
 }
 
-.edit-page button:hover {
-  background-color: #123038;
+.edit-button:hover {
+  background-color: #2f3f44;
+  transform: scale(1.05);
+  transition: all 0.3s ease;
+}
+
+.cancel-button {
+  background-color: #c0392b;
+  color: white;
+  font-weight: bold;
+  width: 100%;
+  padding: 10px;
+  border-radius: 6px;
+  border: none;
+  margin-top: 0px;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+
+.cancel-button:hover {
+  background-color: #e74c3c;
+  transform: scale(1.05);
+  transition: all 0.3s ease;
 }
