--- a/frontend/src/pages/user/register/Register.css
+++ b/frontend/src/pages/user/register/Register.css
@@ -52,3 +52,11 @@
   transform: scale(1.05);
   transition: all 0.3s ease;
 }
+
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* เต็มจอ */
+  background-color: #cbf8ff;
+}
