--- a/frontend/src/pages/doctor/DoctorAppointmentPage.module.css
+++ b/frontend/src/pages/doctor/DoctorAppointmentPage.module.css
@@ -2,8 +2,8 @@
   display: flex;
   gap: 150px;
   background-color: #c1efff;
-  max-height: 100%;
-  padding: 30px;
+  max-height: 1800px;
+  padding: 42px;
   font-family: Arial, sans-serif;
   max-width: 100%;     /* กำหนด max-width */
   margin: 0 auto;       /* จัดกึ่งกลาง */
@@ -138,13 +138,13 @@
 .appointmentInfo {
   display: flex;
   align-items: center;
-  gap: 12px;
+  gap: 10px;
 }
 
 .avatarImg {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  border-radius: 0%;
 }
 
 .patientName {
